--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,5 +1,7 @@
 spring:
-  batch.job.enabled: false
+  batch:
+    job.enabled: false
+    initialize-schema: always
   config:
     activate:
       on-profile:
@@ -7,7 +9,7 @@ spring:
       - default
       - kubernetes 
   application:
-      name: csv-import
+      name: batch-csv-import
   cloud:
     discovery:
       enabled: true
