--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ my.batch.chunk-size=25000
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+#  Data is from: https://www.kaggle.com/START-UMD/gtd
+#  Could be a command line param to support more / different datasets.
 dataUrl=file:/datasets/world/globalterrorismdb_0718dist.csv
